# ifopt

./: CMakeLists.txt
ifopt_cppoptlib/: CMakeLists.txt
ifopt_cppoptlib/include/ifopt/: cppoptlib_adapter.h  cppoptlib_solver.h
ifopt_cppoptlib/src/: cppoptlib_adapter.cc  cppoptlib_solver.cc
ifopt_cppoptlib/test/: ex_test_cppoptlib.cc
ifopt_sqp/: CMakeLists.txt
ifopt_sqp/include/ifopt/: osqp_eigen_adapter.h  osqp_eigen_solver.h  qp_solver.h  simple_sqp_solver.h  sqp_solver.h
ifopt_sqp/src/: osqp_eigen_adapter.cc  osqp_eigen_solver.cc  simple_sqp_solver.cc  sqp_solver.cc
ifopt_sqp/test/: ex_test_osqp_eigen (copy).cc  ex_test_osqp_eigen.cc
